[package]
name = "retroachievements-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
futures = "0.3"
tokio = { version = "1.16.0", features = ["full"] }
bytes = "1"